try to solve overflowing VH bug on real phone

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -5,7 +5,6 @@ body,
 #root {
   height: var(--app-height);
   overflow: hidden;
-  position: fixed;
 }
 
 #root {
